monkey-c-formatter/tests/snapshots/snapshots__if_long_condition_wraps_on_logical_or.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"function fn() { if (somethingVeryLong > 1 \\\n             || somethingEvenLongerThisTime > 1 \\\n             || somethingLongSoWeshouldBreak > 1) { var x = 1; } }\")"
---
function fn() {
    if (somethingVeryLong > 1
        || somethingEvenLongerThisTime > 1
        || somethingLongSoWeshouldBreak > 1)
    {
        var x = 1;
    }
}
