monkey-c-formatter/tests/snapshots/snapshots__if_with_member_access_condition.snap
---
source: tests/snapshots.rs
expression: "format(\"function f() { if (obj.flag) { return 1; } }\")"
---
function f() {
    if (obj.flag) {
        return 1;
    }
}
