monkey-c-formatter/tests/snapshots/snapshots__inline_dict_type_nested.snap
---
source: tests/snapshots.rs
expression: "format(\"function f(o as { :outer as { :inner as Number } }) {}\")"
---
function f(o as {:outer as {:inner as Number}}) {}
