monkey-c-formatter/tests/snapshots/snapshots__inline_dict_type_no_trailing_comma_fits_inline.snap
---
source: tests/snapshots.rs
expression: "format(\"function f(o as { :a as Number, :b as String }) {}\")"
---
function f(o as {:a as Number, :b as String}) {}
