monkey-c-formatter/tests/snapshots/snapshots__inline_dict_type_string_keys.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(r#\"function f(o as { \"name\" as String, \"value\" as Number }) {}\"#)"
---
function f(o as {"name" as String, "value" as Number}) {}
