monkey-c-formatter/tests/snapshots/snapshots__inline_dict_type_symbol_keys.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"function f(opts as { :flag as Boolean, :n as Number }) {}\")"
---
function f(opts as {:flag as Boolean, :n as Number}) {}
