monkey-c-formatter/tests/snapshots/snapshots__inline_dict_type_trailing_comma_forces_multiline.snap
---
source: tests/snapshots.rs
expression: "format(\"function f(o as { :a as Number, :b as String, }) {}\")"
---
function f(
    o as {
        :a as Number,
        :b as String,
    }
) {}
