monkey-c-formatter/tests/snapshots/snapshots__line_comment_after_middle_operand_in_chain.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(r#\"\nfunction f() {\n    if (a || b || // c1\n        c) {\n        foo();\n    }\n}\n\"#.trim())"
---
function f() {
    if (a
        || b || // c1
        c)
    {
        foo();
    }
}
